@@ -20,6 +20,7 @@
 
 package org.iplass.gem.command.generic.detail;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -36,6 +37,7 @@ import org.iplass.mtp.entity.EntityRuntimeException;
 import org.iplass.mtp.entity.GenericEntity;
 import org.iplass.mtp.entity.SelectValue;
 import org.iplass.mtp.entity.ValidateError;
+import org.iplass.mtp.entity.definition.EntityDefinition;
 import org.iplass.mtp.entity.definition.EntityDefinitionManager;
 import org.iplass.mtp.entity.definition.PropertyDefinition;
 import org.iplass.mtp.entity.definition.PropertyDefinitionType;
@@ -79,8 +81,8 @@ public abstract class RegistrationCommandContext extends GenericCommandContext {
 
 	/** Load時に最新データを強制的に取得するか（下位互換対応） */
 	@Deprecated
-	private final boolean loadLatestVersionedEntity
-		= Boolean.parseBoolean(System.getProperty("mtp.entity.update.targetSpecific.loadLatestVersionedEntity"));
+	private final boolean loadLatestVersionedEntity = Boolean
+			.parseBoolean(System.getProperty("mtp.entity.update.targetSpecific.loadLatestVersionedEntity"));
 
 	/** 変換時に発生したエラー情報 */
 	private List<ValidateError> errors;
@@ -124,29 +126,41 @@ public abstract class RegistrationCommandContext extends GenericCommandContext {
 		return loadLatestVersionedEntity;
 	}
 
+	/**
+	 * MappingClassを考慮したEntityインスタンスを返します。
+	 *
+	 * @return Entityインスタンス
+	 */
 	protected Entity newEntity() {
-		Entity res = null;
+		return newEntity(entityDefinition);
+	}
+
+	/**
+	 * MappingClassを考慮したEntityインスタンスを返します。
+	 *
+	 * @param entityDefinition Entity定義
+	 * @return Entityインスタンス
+	 */
+	protected Entity newEntity(EntityDefinition entityDefinition) {
+		Entity entity = null;
 		if (entityDefinition.getMapping() != null && entityDefinition.getMapping().getMappingModelClass() != null) {
 			try {
-				res = (Entity) Class.forName(entityDefinition.getMapping().getMappingModelClass()).newInstance();
-			} catch (InstantiationException e) {
-				throw new EntityRuntimeException(e);
-			} catch (IllegalAccessException e) {
-				throw new EntityRuntimeException(e);
-			} catch (ClassNotFoundException e) {
+				entity = (Entity) Class.forName(entityDefinition.getMapping().getMappingModelClass()).getDeclaredConstructor().newInstance();
+			} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException
+					| ClassNotFoundException e) {
 				throw new EntityRuntimeException(e);
 			}
 		} else {
-			res = new GenericEntity();
+			entity = new GenericEntity();
 		}
-		res.setDefinitionName(entityDefinition.getName());
-		return res;
+		entity.setDefinitionName(entityDefinition.getName());
+		return entity;
 	}
 
 	protected Object getPropValue(PropertyDefinition p, String paramPrefix) {
 		Object value = null;
 		boolean isMultiple = p.getMultiplicity() != 1;
-		String name = paramPrefix +  p.getName();
+		String name = paramPrefix + p.getName();
 		if (p instanceof BinaryProperty) {
 			value = isMultiple ? getBinaryReferenceValues(name) : getBinaryReferenceValue(name);
 		} else if (p instanceof BooleanProperty) {
@@ -262,10 +276,13 @@ public abstract class RegistrationCommandContext extends GenericCommandContext {
 			ret = param != null ? Boolean.parseBoolean(param) : null;
 
 			//チェックボックス未チェック時はNullになるがfalseに置き換える
-			if (ret == null && type == BooleanDisplayType.CHECKBOX) ret = false;
+			if (ret == null && type == BooleanDisplayType.CHECKBOX) {
+				ret = false;
+			}
 		}
 		return ret;
 	}
+
 	protected Boolean[] getBooleanValues(String name, int multiplicity) {
 		String _type = getParam(name + "Type");
 		BooleanDisplayType type = StringUtil.isNotEmpty(_type) ? BooleanDisplayType.valueOf(_type) : null;
@@ -290,13 +307,15 @@ public abstract class RegistrationCommandContext extends GenericCommandContext {
 			for (int i = 0; i < multiplicity; i++) {
 				String param = getParam(name + i);
 				Boolean b = param != null ? Boolean.parseBoolean(param) : null;
-				if (b == null && type == BooleanDisplayType.CHECKBOX) b = false;
+				if (b == null && type == BooleanDisplayType.CHECKBOX) {
+					b = false;
+				}
 				list.add(b);
 			}
 			//データが１つでも存在する場合のみ配列化
 			boolean hasValue = list.stream().anyMatch(value -> value != null);
 			if (hasValue) {
-				ret = list.toArray(new Boolean[]{});
+				ret = list.toArray(new Boolean[] {});
 			}
 		}
 		return ret != null && ret.length > 0 ? ret : null;
@@ -314,13 +333,13 @@ public abstract class RegistrationCommandContext extends GenericCommandContext {
 		String param = getParam(name);
 		String lang = I18nUtil.getLanguageIfUseMultilingual();
 		if (StringUtil.isNotBlank(param)) {
-			if(selectProperty == null) {
+			if (selectProperty == null) {
 				return new SelectValue(param);
 			}
 			SelectValue selectValue = selectProperty.getLocalizedSelectValue(param, lang);
 			return selectValue == null
-				? new SelectValue(param)
-				: selectValue;
+					? new SelectValue(param)
+					: selectValue;
 		}
 
 		return null;
@@ -336,14 +355,14 @@ public abstract class RegistrationCommandContext extends GenericCommandContext {
 							return null;
 						}
 
-						if(selectProperty == null) {
+						if (selectProperty == null) {
 							return new SelectValue(param);
 						}
 
 						SelectValue selectValue = selectProperty.getLocalizedSelectValue(param, lang);
 						return selectValue == null
-							? new SelectValue(param)
-							: selectValue;
+								? new SelectValue(param)
+								: selectValue;
 					})
 					.toArray(SelectValue[]::new);
 			return ret.length > 0 ? ret : null;
@@ -400,7 +419,8 @@ public abstract class RegistrationCommandContext extends GenericCommandContext {
 		if (interrupter == null) {
 			//何もしないデフォルトInterrupter生成
 			getLogger().debug("set defaul registration interrupter.");
-			interrupter = new RegistrationInterrupter(){};
+			interrupter = new RegistrationInterrupter() {
+			};
 		}
 		return interrupter;
 	}
@@ -433,7 +453,8 @@ public abstract class RegistrationCommandContext extends GenericCommandContext {
 		if (interrupter == null) {
 			//何もしないデフォルトInterrupter生成
 			getLogger().debug("set defaul load entity interrupter.");
-			interrupter = new LoadEntityInterrupter() {};
+			interrupter = new LoadEntityInterrupter() {
+			};
 		}
 		return interrupter;
 	}
@@ -508,7 +529,9 @@ public abstract class RegistrationCommandContext extends GenericCommandContext {
 
 	@Override
 	public List<ValidateError> getErrors() {
-		if (errors == null) errors = new ArrayList<>();
+		if (errors == null) {
+			errors = new ArrayList<>();
+		}
 		return errors;
 	}
 
